--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "contact_app",
+  "name": "contact",
   "version": "1.0.0",
   "description": "code challenge project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "live-server public/",
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Samuel Xing",
+  "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "live-server": "^1.2.0"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "live-server": "^1.2.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "validator": "^8.0.0",
+    "webpack": "^3.1.0"
   }
 }
