--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.0.0",
     "validator": "^8.0.0",
     "webpack": "^3.1.0"
