--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "live-server": "^1.2.0",
+    "normalize.css": "^7.0.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
