--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "code challenge project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "normalize.css": "^7.0.0",
     "webpack-dev-server": "^2.5.1"
