--- a/package.json
+++ b/package.json
@@ -4,27 +4,24 @@
   "description": "code challenge project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
+    "test": "jest",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
   "author": "Samuel Xing",
   "license": "MIT",
-  "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.0",
-    "normalize.css": "^7.0.0",
-    "webpack-dev-server": "^2.5.1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/SamuelXing/ContactsApp"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.1",
+    "jest": "^20.0.4",
+    "live-server": "^1.2.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -32,12 +29,15 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "express": "^4.15.4",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.0.0",
+    "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "validator": "^8.0.0",
