--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -19,8 +19,13 @@
   },
   "devDependencies": {
     "chalk": "^2.4.1",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
+    "raf": "^3.3.2",
+    "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
